# MedQA-MultiAgent-System

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  claude-progress.md  clean-state-checklist.md  config.yaml  feature_list.json  goal.md  init.ps1  init.sh  main.py  pyproject.toml  session-handoff.md
memory/: long_term_rules.json
notebooks/: answering-medqa-questions-with-rag.ipynb  medqa-eda-embeddings.ipynb
src/medqa_multi_agents/: __init__.py  trace.py
src/medqa_multi_agents/agents/: __init__.py  answerer.py  evaluator.py  retriever.py  rewriter.py
src/medqa_multi_agents/memory/: __init__.py  build_rules_from_dev_logs.py  long_term.py  short_term.py
src/medqa_multi_agents/prompts/: __init__.py  answerer.md  evaluator.md  retriever.md  rewriter.md  supervisor.md
src/medqa_multi_agents/scripts/: __init__.py  ingest_textbooks.py
src/medqa_multi_agents/vectorstore/: __init__.py  db.py  embedding.py
tests/: AGENTS.md  conftest.py  test_answerer.py  test_evaluator.py  test_long_term_memory.py  test_retriever.py  test_rewriter.py  test_supervisor.py
